--- a/flume/conf/flume-a1.conf
+++ b/flume/conf/flume-a1.conf
@@ -1,23 +1,23 @@
 docker1.sinks = kafkaSink
-docker1.sources = avroSource
-docker1.channels = inMemoryChannel
+docker1.sources = avroSource1
+docker1.channels = inMemoryChannel1
 
-docker1.sources.avroSource.type = avro
-docker1.sources.avroSource.channels = inMemoryChannel
-docker1.sources.avroSource.bind = flume
-docker1.sources.avroSource.port = 44451
-docker1.sources.avroSource.channels = inMemoryChannel
+docker1.sources.avroSource1.type = avro
+docker1.sources.avroSource1.channels = inMemoryChannel1
+docker1.sources.avroSource1.bind = flume
+docker1.sources.avroSource1.port = 44451
+docker1.sources.avroSource1.channels = inMemoryChannel1
 
-docker1.channels.inMemoryChannel.type = memory
-docker1.channels.inMemoryChannel.capacity = 10000
-docker1.channels.inMemoryChannel.transactionCapacity = 10000
+docker1.channels.inMemoryChannel1.type = memory
+docker1.channels.inMemoryChannel1.capacity = 10000
+docker1.channels.inMemoryChannel1.transactionCapacity = 10000
 
 #docker.sinks.fileSink.type = file_roll
 #docker.sinks.fileSink.channel = inMemoryChannel
 #docker.sinks.fileSink.sink.directory = /var/tmp
 #docker.sinks.fileSink.rollInterval = 5
 
-docker1.sinks.kafkaSink.channel = inMemoryChannel
+docker1.sinks.kafkaSink.channel = inMemoryChannel1
 docker1.sinks.kafkaSink.type = org.apache.flume.sink.kafka.KafkaSink
 docker1.sinks.kafkaSink.batchSize = 5
 docker1.sinks.kafkaSink.brokerList = kafka:9092
