--- a/flume/conf/flume-a2.conf
+++ b/flume/conf/flume-a2.conf
@@ -1,23 +1,23 @@
 docker2.sinks = kafkaSink
-docker2.sources = avroSource
-docker2.channels = inMemoryChannel
+docker2.sources = avroSource2
+docker2.channels = inMemoryChannel2
 
-docker2.sources.avroSource.type = avro
-docker2.sources.avroSource.channels = inMemoryChannel
-docker2.sources.avroSource.bind = flume
-docker2.sources.avroSource.port = 44452
-docker2.sources.avroSource.channels = inMemoryChannel
+docker2.sources.avroSource2.type = avro
+docker2.sources.avroSource2.channels = inMemoryChannel2
+docker2.sources.avroSource2.bind = flume
+docker2.sources.avroSource2.port = 44452
+docker2.sources.avroSource2.channels = inMemoryChannel2
 
-docker2.channels.inMemoryChannel.type = memory
-docker2.channels.inMemoryChannel.capacity = 10000
-docker2.channels.inMemoryChannel.transactionCapacity = 10000
+docker2.channels.inMemoryChannel2.type = memory
+docker2.channels.inMemoryChannel2.capacity = 10000
+docker2.channels.inMemoryChannel2.transactionCapacity = 10000
 
 #docker.sinks.fileSink.type = file_roll
 #docker.sinks.fileSink.channel = inMemoryChannel
 #docker.sinks.fileSink.sink.directory = /var/tmp
 #docker.sinks.fileSink.rollInterval = 5
 
-docker2.sinks.kafkaSink.channel = inMemoryChannel
+docker2.sinks.kafkaSink.channel = inMemoryChannel2
 docker2.sinks.kafkaSink.type = org.apache.flume.sink.kafka.KafkaSink
 docker2.sinks.kafkaSink.batchSize = 5
 docker2.sinks.kafkaSink.brokerList = kafka:9092
