--- a/flume/conf/flume-a3.conf
+++ b/flume/conf/flume-a3.conf
@@ -1,23 +1,23 @@
 docker3.sinks = kafkaSink
-docker3.sources = avroSource
-docker3.channels = inMemoryChannel
+docker3.sources = avroSource3
+docker3.channels = inMemoryChannel3
 
-docker3.sources.avroSource.type = avro
-docker3.sources.avroSource.channels = inMemoryChannel
-docker3.sources.avroSource.bind = flume
-docker3.sources.avroSource.port = 44453
-docker3.sources.avroSource.channels = inMemoryChannel
+docker3.sources.avroSource3.type = avro
+docker3.sources.avroSource3.channels = inMemoryChannel3
+docker3.sources.avroSource3.bind = flume
+docker3.sources.avroSource3.port = 44453
+docker3.sources.avroSource3.channels = inMemoryChannel3
 
-docker3.channels.inMemoryChannel.type = memory
-docker3.channels.inMemoryChannel.capacity = 10000
-docker3.channels.inMemoryChannel.transactionCapacity = 10000
+docker3.channels.inMemoryChannel3.type = memory
+docker3.channels.inMemoryChannel3.capacity = 10000
+docker3.channels.inMemoryChannel3.transactionCapacity = 10000
 
 #docker.sinks.fileSink.type = file_roll
 #docker.sinks.fileSink.channel = inMemoryChannel
 #docker.sinks.fileSink.sink.directory = /var/tmp
 #docker.sinks.fileSink.rollInterval = 5
 
-docker3.sinks.kafkaSink.channel = inMemoryChannel
+docker3.sinks.kafkaSink.channel = inMemoryChannel3
 docker3.sinks.kafkaSink.type = org.apache.flume.sink.kafka.KafkaSink
 docker3.sinks.kafkaSink.batchSize = 5
 docker3.sinks.kafkaSink.brokerList = kafka:9092
