--- a/flume/conf/flume-a4.conf
+++ b/flume/conf/flume-a4.conf
@@ -1,23 +1,23 @@
 docker4.sinks = kafkaSink
-docker4.sources = avroSource
-docker4.channels = inMemoryChannel
+docker4.sources = avroSource4
+docker4.channels = inMemoryChannel4
 
-docker4.sources.avroSource.type = avro
-docker4.sources.avroSource.channels = inMemoryChannel
-docker4.sources.avroSource.bind = flume
-docker4.sources.avroSource.port = 44454
-docker4.sources.avroSource.channels = inMemoryChannel
+docker4.sources.avroSource4.type = avro
+docker4.sources.avroSource4.channels = inMemoryChannel4
+docker4.sources.avroSource4.bind = flume
+docker4.sources.avroSource4.port = 44454
+docker4.sources.avroSource4.channels = inMemoryChannel4
 
-docker4.channels.inMemoryChannel.type = memory
-docker4.channels.inMemoryChannel.capacity = 10000
-docker4.channels.inMemoryChannel.transactionCapacity = 10000
+docker4.channels.inMemoryChannel4.type = memory
+docker4.channels.inMemoryChannel4.capacity = 10000
+docker4.channels.inMemoryChannel4.transactionCapacity = 10000
 
 #docker.sinks.fileSink.type = file_roll
 #docker.sinks.fileSink.channel = inMemoryChannel
 #docker.sinks.fileSink.sink.directory = /var/tmp
 #docker.sinks.fileSink.rollInterval = 5
 
-docker4.sinks.kafkaSink.channel = inMemoryChannel
+docker4.sinks.kafkaSink.channel = inMemoryChannel4
 docker4.sinks.kafkaSink.type = org.apache.flume.sink.kafka.KafkaSink
 docker4.sinks.kafkaSink.batchSize = 5
 docker4.sinks.kafkaSink.brokerList = kafka:9092
