--- a/flume/conf/flume-a5.conf
+++ b/flume/conf/flume-a5.conf
@@ -1,23 +1,23 @@
 docker5.sinks = kafkaSink
-docker5.sources = avroSource
-docker5.channels = inMemoryChannel
+docker5.sources = avroSource5
+docker5.channels = inMemoryChannel5
 
-docker5.sources.avroSource.type = avro
-docker5.sources.avroSource.channels = inMemoryChannel
-docker5.sources.avroSource.bind = flume
-docker5.sources.avroSource.port = 44455
-docker5.sources.avroSource.channels = inMemoryChannel
+docker5.sources.avroSource5.type = avro
+docker5.sources.avroSource5.channels = inMemoryChannel5
+docker5.sources.avroSource5.bind = flume
+docker5.sources.avroSource5.port = 44455
+docker5.sources.avroSource5.channels = inMemoryChannel5
 
-docker5.channels.inMemoryChannel.type = memory
-docker5.channels.inMemoryChannel.capacity = 10000
-docker5.channels.inMemoryChannel.transactionCapacity = 10000
+docker5.channels.inMemoryChannel5.type = memory
+docker5.channels.inMemoryChannel5.capacity = 10000
+docker5.channels.inMemoryChannel5.transactionCapacity = 10000
 
 #docker.sinks.fileSink.type = file_roll
 #docker.sinks.fileSink.channel = inMemoryChannel
 #docker.sinks.fileSink.sink.directory = /var/tmp
 #docker.sinks.fileSink.rollInterval = 5
 
-docker5.sinks.kafkaSink.channel = inMemoryChannel
+docker5.sinks.kafkaSink.channel = inMemoryChannel5
 docker5.sinks.kafkaSink.type = org.apache.flume.sink.kafka.KafkaSink
 docker5.sinks.kafkaSink.batchSize = 5
 docker5.sinks.kafkaSink.brokerList = kafka:9092
