change bind ip.

--- a/flume/conf/flume-a1.conf
+++ b/flume/conf/flume-a1.conf
@@ -4,7 +4,7 @@ docker1.channels = inMemoryChannel1
 
 docker1.sources.avroSource1.type = avro
 docker1.sources.avroSource1.channels = inMemoryChannel1
-docker1.sources.avroSource1.bind = flume
+docker1.sources.avroSource1.bind = 0.0.0.0
 docker1.sources.avroSource1.port = 44451
 docker1.sources.avroSource1.channels = inMemoryChannel1
 
