--- a/flume/conf/flume-a2.conf
+++ b/flume/conf/flume-a2.conf
@@ -4,7 +4,7 @@ docker2.channels = inMemoryChannel2
 
 docker2.sources.avroSource2.type = avro
 docker2.sources.avroSource2.channels = inMemoryChannel2
-docker2.sources.avroSource2.bind = flume
+docker2.sources.avroSource2.bind = 0.0.0.0
 docker2.sources.avroSource2.port = 44452
 docker2.sources.avroSource2.channels = inMemoryChannel2
 
