--- a/flume/conf/flume-a3.conf
+++ b/flume/conf/flume-a3.conf
@@ -4,7 +4,7 @@ docker3.channels = inMemoryChannel3
 
 docker3.sources.avroSource3.type = avro
 docker3.sources.avroSource3.channels = inMemoryChannel3
-docker3.sources.avroSource3.bind = flume
+docker3.sources.avroSource3.bind = 0.0.0.0
 docker3.sources.avroSource3.port = 44453
 docker3.sources.avroSource3.channels = inMemoryChannel3
 
