--- a/flume/conf/flume-a4.conf
+++ b/flume/conf/flume-a4.conf
@@ -4,7 +4,7 @@ docker4.channels = inMemoryChannel4
 
 docker4.sources.avroSource4.type = avro
 docker4.sources.avroSource4.channels = inMemoryChannel4
-docker4.sources.avroSource4.bind = flume
+docker4.sources.avroSource4.bind = 0.0.0.0
 docker4.sources.avroSource4.port = 44454
 docker4.sources.avroSource4.channels = inMemoryChannel4
 
