--- a/flume/conf/flume-a5.conf
+++ b/flume/conf/flume-a5.conf
@@ -4,7 +4,7 @@ docker5.channels = inMemoryChannel5
 
 docker5.sources.avroSource5.type = avro
 docker5.sources.avroSource5.channels = inMemoryChannel5
-docker5.sources.avroSource5.bind = flume
+docker5.sources.avroSource5.bind = 0.0.0.0
 docker5.sources.avroSource5.port = 44455
 docker5.sources.avroSource5.channels = inMemoryChannel5
 
