update v4 setup channel capacity to 500k events, transaction capacity to 100k events.

--- a/flume/conf/flume-a4.conf
+++ b/flume/conf/flume-a4.conf
@@ -7,21 +7,14 @@ docker4.sources.avroSource4.channels = inMemoryChannel4
 docker4.sources.avroSource4.bind = 0.0.0.0
 docker4.sources.avroSource4.port = 44454
 docker4.sources.avroSource4.channels = inMemoryChannel4
+docker4.sources.avroSource1.threads = 2
 
 docker4.channels.inMemoryChannel4.type = memory
-docker4.channels.inMemoryChannel4.capacity = 10000
-docker4.channels.inMemoryChannel4.transactionCapacity = 10000
-
-#docker.sinks.fileSink.type = file_roll
-#docker.sinks.fileSink.channel = inMemoryChannel
-#docker.sinks.fileSink.sink.directory = /var/tmp
-#docker.sinks.fileSink.rollInterval = 5
+docker4.channels.inMemoryChannel4.capacity = 500000
+docker4.channels.inMemoryChannel4.transactionCapacity = 100000
 
 docker4.sinks.kafkaSink.channel = inMemoryChannel4
 docker4.sinks.kafkaSink.type = org.apache.flume.sink.kafka.KafkaSink
 docker4.sinks.kafkaSink.batchSize = 5
 docker4.sinks.kafkaSink.brokerList = kafka:9092
 docker4.sinks.kafkaSink.topic = sample_topic
-
-#docker.sources.kafkaSink.type = org.apache.flume.source.kafka.KafkaSource
-#docker.sources.kafkaSink.kafka.bootstrap.servers = 172.16.238.10:9092
