--- a/flume/conf/flume-a1.conf
+++ b/flume/conf/flume-a1.conf
@@ -7,21 +7,14 @@ docker1.sources.avroSource1.channels = inMemoryChannel1
 docker1.sources.avroSource1.bind = 0.0.0.0
 docker1.sources.avroSource1.port = 44451
 docker1.sources.avroSource1.channels = inMemoryChannel1
+docker1.sources.avroSource1.threads = 2
 
 docker1.channels.inMemoryChannel1.type = memory
-docker1.channels.inMemoryChannel1.capacity = 10000
-docker1.channels.inMemoryChannel1.transactionCapacity = 10000
-
-#docker.sinks.fileSink.type = file_roll
-#docker.sinks.fileSink.channel = inMemoryChannel
-#docker.sinks.fileSink.sink.directory = /var/tmp
-#docker.sinks.fileSink.rollInterval = 5
+docker1.channels.inMemoryChannel1.capacity = 500000
+docker1.channels.inMemoryChannel1.transactionCapacity = 100000
 
 docker1.sinks.kafkaSink.channel = inMemoryChannel1
 docker1.sinks.kafkaSink.type = org.apache.flume.sink.kafka.KafkaSink
 docker1.sinks.kafkaSink.batchSize = 5
 docker1.sinks.kafkaSink.brokerList = kafka:9092
 docker1.sinks.kafkaSink.topic = sample_topic
-
-#docker.sources.kafkaSink.type = org.apache.flume.source.kafka.KafkaSource
-#docker.sources.kafkaSink.kafka.bootstrap.servers = 172.16.238.10:9092
