--- a/flume/conf/flume-a2.conf
+++ b/flume/conf/flume-a2.conf
@@ -7,21 +7,14 @@ docker2.sources.avroSource2.channels = inMemoryChannel2
 docker2.sources.avroSource2.bind = 0.0.0.0
 docker2.sources.avroSource2.port = 44452
 docker2.sources.avroSource2.channels = inMemoryChannel2
+docker2.sources.avroSource1.threads = 2
 
 docker2.channels.inMemoryChannel2.type = memory
-docker2.channels.inMemoryChannel2.capacity = 10000
-docker2.channels.inMemoryChannel2.transactionCapacity = 10000
-
-#docker.sinks.fileSink.type = file_roll
-#docker.sinks.fileSink.channel = inMemoryChannel
-#docker.sinks.fileSink.sink.directory = /var/tmp
-#docker.sinks.fileSink.rollInterval = 5
+docker2.channels.inMemoryChannel2.capacity = 500000
+docker2.channels.inMemoryChannel2.transactionCapacity = 100000
 
 docker2.sinks.kafkaSink.channel = inMemoryChannel2
 docker2.sinks.kafkaSink.type = org.apache.flume.sink.kafka.KafkaSink
 docker2.sinks.kafkaSink.batchSize = 5
 docker2.sinks.kafkaSink.brokerList = kafka:9092
 docker2.sinks.kafkaSink.topic = sample_topic
-
-#docker.sources.kafkaSink.type = org.apache.flume.source.kafka.KafkaSource
-#docker.sources.kafkaSink.kafka.bootstrap.servers = 172.16.238.10:9092
