--- a/flume/conf/flume-a3.conf
+++ b/flume/conf/flume-a3.conf
@@ -7,21 +7,14 @@ docker3.sources.avroSource3.channels = inMemoryChannel3
 docker3.sources.avroSource3.bind = 0.0.0.0
 docker3.sources.avroSource3.port = 44453
 docker3.sources.avroSource3.channels = inMemoryChannel3
+docker3.sources.avroSource1.threads = 2
 
 docker3.channels.inMemoryChannel3.type = memory
-docker3.channels.inMemoryChannel3.capacity = 10000
-docker3.channels.inMemoryChannel3.transactionCapacity = 10000
-
-#docker.sinks.fileSink.type = file_roll
-#docker.sinks.fileSink.channel = inMemoryChannel
-#docker.sinks.fileSink.sink.directory = /var/tmp
-#docker.sinks.fileSink.rollInterval = 5
+docker3.channels.inMemoryChannel3.capacity = 500000
+docker3.channels.inMemoryChannel3.transactionCapacity = 100000
 
 docker3.sinks.kafkaSink.channel = inMemoryChannel3
 docker3.sinks.kafkaSink.type = org.apache.flume.sink.kafka.KafkaSink
 docker3.sinks.kafkaSink.batchSize = 5
 docker3.sinks.kafkaSink.brokerList = kafka:9092
 docker3.sinks.kafkaSink.topic = sample_topic
-
-#docker.sources.kafkaSink.type = org.apache.flume.source.kafka.KafkaSource
-#docker.sources.kafkaSink.kafka.bootstrap.servers = 172.16.238.10:9092
