--- a/kafka/Dockerfile-kafka
+++ b/kafka/Dockerfile-kafka
@@ -1,7 +1,7 @@
 FROM openjdk:11.0.10-jre-buster
 
 RUN apt-get update && \
-    apt-get install -y curl
+    apt-get install -y curl nano
 
 ENV KAFKA_VERSION 3.2.1
 ENV SCALA_VERSION 2.12
@@ -9,7 +9,7 @@ ENV SCALA_VERSION 2.12
 RUN mkdir /tmp/kafka && \
     curl "https://archive.apache.org/dist/kafka/${KAFKA_VERSION}/kafka_${SCALA_VERSION}-${KAFKA_VERSION}.tgz" \
     -o /tmp/kafka/kafka.tgz && \
-    mkdir /kafka && cd /kafka && \
+    mkdir /usr/local/kafka && cd /usr/local/kafka && \
     tar -xvzf /tmp/kafka/kafka.tgz --strip 1
 
 COPY start-kafka.sh  /usr/bin
